--- a/models/staging/stripe/src_stripe.yml
+++ b/models/staging/stripe/src_stripe.yml
@@ -5,8 +5,4 @@ sources:
     database: dbt-tutorial
     schema: stripe
     tables:
-      - name: payments
-      loaded_at_field: _batched_at
-        freshness:
-          warn_after: {count: 12, period: hour}
-          error_after: {count: 24, period: hour}
+      - name: payment
